# donor-guide-bot

./: .gitignore  Dockerfile  README.md  deployment-instraction.md  deployment-manual.md  docker-compose.local.yml  pyproject.toml
.github/workflows/: actions.yml
docs/: deployment-manual.md
docs/c4/: components.md  containers.md  context.md  deployment.md
docs/db/: er-diagram.md
docs/uml/: sequence-diagram.md  uml-donor-guide-bot.vpp
migration/: env.py
migration/versions/: 12a7351cad7c_initial_revision.py  7efe8e62078f_update_user_chat_id_type.py  c789b1b047c2_add_folders_and_questions.py  d3ababfd2963_add_default_to_is_active.py
src/: config.py  main.py
src/database/: database.py
src/database/models/: base.py  folder.py  question.py  user.py  user_question.py
src/database/repositories/: base.py  folder.py  question.py  user.py  user_question.py
src/database/seeds/: folders.py  initial_data.py  questions.py  questions_data.py
src/handlers/: folder_navigation.py  handlers.py  keyboards.py  user_questions.py
src/schemas/: base.py  folder.py  question.py  user.py  user_question.py
src/services/: metric_service.py
