[project]
name = "donor-guide-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [
    { include = "src" }
]

[virtualenvs]
in-project = true

[tool.poetry.scripts]
start = "src.main:start"

[tool.poetry.dependencies]
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
telebot = "^0.0.5"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv"
]
extend-ignore = [
    "E203"
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312"]
line-length = 100
include = '\.pyi?$'
